--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
   "name": "YAE-gulp",
   "version": "1.0.0",
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-coverage": "^0.3.36",
+    "gulp-csso": "^1.0.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-mocha": "^2.1.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.3.0",
+    "jshint-stylish": "^2.0.1"
+  },
   "description": "YAE frontend standard",
   "main": "index.js",
   "scripts": {
